@@ -4,6 +4,11 @@
 	* Freed GCHandles in a few places, but there are still a lot of leaks
 	* Hmm, a fix for a GCHandle leak stopped custom slots from working for
 	  no apparent reason.
+	* The above problem is caused by the GCHandle leak preventing premature
+	  garbage collection, and once the leak problem was fixed it exposed
+	  Qyoto's problems with coordinatign C#'s GC with Qt memory management
+	  via QObject trees etc.
+	* Qyoto method calls can now return null values
 
 2007-03-21  Arno Rehn  <arno@arnorehn.de>
 
